--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -741,6 +741,7 @@ a:hover {
 	-ms-transition: all 0.3s ease-in-out;
 	-o-transition: all 0.3s ease-in-out;
 	transition: all 0.3s ease-in-out;
+	flex-shrink: 0;
 }
 
 .work-block-left:hover .work-block-img, .work-block-right:hover .work-block-img {
