--- a/styles/styles.css
+++ b/styles/styles.css
@@ -47,13 +47,22 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 html {
   scroll-behavior: smooth; }
 
+/* The animation code */
+@keyframes site-wakeup {
+  from {
+    opacity: 0; }
+  to {
+    opacity: 1.0; } }
+
 body {
   line-height: 1;
   color: #000000;
   background: #FFFFFF;
   text-rendering: optimizeLegibility;
   font-smoothing: antialiased;
-  -webkit-font-smoothing: antialiased; }
+  -webkit-font-smoothing: antialiased;
+  animation-name: site-wakeup;
+  animation-duration: 5s; }
 
 ol, ul {
   list-style: none; }
