--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -91,6 +91,12 @@ html {
 	scroll-behavior: smooth;
 }
 
+/* The animation code */
+@keyframes site-wakeup {
+  from {opacity: 0;}
+  to {opacity: 1.0;}
+}
+
 body {
 	line-height: 1;
 	color: $grayscale-1000;
@@ -98,6 +104,8 @@ body {
 	text-rendering: optimizeLegibility;
 	font-smoothing: antialiased;
 	-webkit-font-smoothing: antialiased;
+	animation-name: site-wakeup;
+	animation-duration: 5s;
 }
 
 ol, ul {
