--- a/styles/styles.css
+++ b/styles/styles.css
@@ -476,6 +476,9 @@ a:hover {
   z-index: 10;
   font-size: 0.813rem; }
 
+.intro-mobile {
+  display: none; }
+
 .vectors {
   width: 6000px;
   position: absolute;
@@ -853,6 +856,12 @@ a:hover {
     color: #000000;
     z-index: 10;
     font-size: 0.813rem; }
+  .intro-desktop {
+    display: none; }
+  .intro-mobile {
+    display: block; }
+  .tooltip {
+    display: none; }
   .vector {
     margin-right: 2rem; }
   .wisconsin-mug .tooltip {
@@ -939,6 +948,10 @@ a:hover {
     font-size: 0.625rem; }
   .vector img {
     max-width: 100px; }
+  .description {
+    width: 95%;
+    bottom: -140px;
+    right: -20px; }
   .project-img .description, .hero .description {
     padding: 1rem; }
   .work-block-img {
