--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -915,6 +915,19 @@ a:hover {
 	transform: translate(-50%,0);
 }
 
+.king-video {
+	position: relative;
+	height: 985px;
+	background-color: $grayscale-1000;
+	border-radius: 20px;
+}
+
+.king-video video {
+	position: absolute;
+	left: 50%;
+	transform: translate(-50%,0);
+}
+
 .footer {
 	text-align: center;
 	padding: 2rem;
