--- a/styles/styles.css
+++ b/styles/styles.css
@@ -761,11 +761,12 @@ a:hover {
 
 .king-video {
   position: relative;
-  height: 985px;
+  height: 800px;
   background-color: #000000;
   border-radius: 20px; }
 
 .king-video video {
+  width: 400px;
   position: absolute;
   left: 50%;
   transform: translate(-50%, 0); }
