Added chevrons to nav

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -543,6 +543,11 @@ a:hover {
 	padding: 0.5rem 0;
 }
 
+.menu-item .fa-chevron-down {
+	font-size: 0.563rem;
+	vertical-align: 1px;
+}
+
 .menu-dropdown {
 	display: block;
 	position: absolute;
