--- a/styles/styles.css
+++ b/styles/styles.css
@@ -428,6 +428,10 @@ a:hover {
   position: relative;
   padding: 0.5rem 0; }
 
+.menu-item .fa-chevron-down {
+  font-size: 0.563rem;
+  vertical-align: 1px; }
+
 .menu-dropdown {
   display: block;
   position: absolute;
