--- a/styles/styles.css
+++ b/styles/styles.css
@@ -799,28 +799,22 @@ a:hover {
   width: 800px;
   margin: 6rem auto; }
 
-.ninty-video {
+.ninty-video, .king-video {
   position: relative;
   height: 800px;
   background-color: #68BCF5;
   border-radius: 20px; }
 
-.ninty-video video {
+.ninty-video video, .king-video video {
   position: absolute;
   left: 50%;
   transform: translate(-50%, 0); }
 
 .king-video {
-  position: relative;
-  height: 800px;
-  background-color: #000000;
-  border-radius: 20px; }
+  background-color: #000000; }
 
 .king-video video {
-  width: 400px;
-  position: absolute;
-  left: 50%;
-  transform: translate(-50%, 0); }
+  width: 400px; }
 
 .footer {
   text-align: center;
@@ -1048,6 +1042,10 @@ a:hover {
   .project-img .description, .hero .description {
     padding: 1rem; }
   .work-block-img {
+    width: 300px; }
+  .ninty-video, .king-video {
+    height: 625px; }
+  .ninty-video video, .king-video video {
     width: 300px; } }
 
 /* End Responsive/Media Queries */
