Updates to overall styles, added top and bottom to project copy

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -797,7 +797,23 @@ a:hover {
 
 .project-copy {
   width: 800px;
-  margin: 6rem auto; }
+  margin: 8rem auto;
+  padding: 2.25rem 0 1rem;
+  position: relative; }
+
+.project-copy::before, .project-copy::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translate(-50%, 0);
+  height: 2px;
+  width: 60px;
+  background-color: #E0E0E0; }
+
+.project-copy::after {
+  top: auto;
+  bottom: 0; }
 
 .ninty-video, .king-video {
   position: relative;
@@ -837,6 +853,8 @@ a:hover {
     font-size: 0.75rem; }
   .hero {
     padding: 240px 0 400px; }
+  .project .hero {
+    padding-bottom: 100px; }
   .hero-block {
     width: 90%; }
   .content-block {
@@ -853,7 +871,7 @@ a:hover {
     right: -50px; }
   .project-copy {
     width: 600px;
-    margin: 5rem auto; } }
+    margin: 6rem auto; } }
 
 /* md */
 @media (max-width: 980px) {
@@ -1035,14 +1053,55 @@ a:hover {
     font-size: 0.625rem; }
   .vector img {
     max-width: 100px; }
+  .project .hero {
+    padding-bottom: 120px; }
+  .hero-block {
+    padding: 2rem;
+    font-size: 1.25rem;
+    line-height: 2rem;
+    width: 100%; }
+  .hero-block:after {
+    display: none; }
+  .about-me {
+    padding: 8rem 0; }
+  .content-block {
+    padding: 2rem;
+    width: 100%; }
+  .content-block:before {
+    display: none; }
+  .project .hero .content-block-title {
+    top: auto;
+    bottom: 92%;
+    left: 10px; }
   .description {
     width: 95%;
-    bottom: -140px;
-    right: -20px; }
+    bottom: -160px;
+    right: -10px; }
+  .hero .description {
+    width: 100%;
+    top: 95%;
+    bottom: auto;
+    right: -10px;
+    padding: 1rem; }
   .project-img .description, .hero .description {
     padding: 1rem; }
+  .work-block-left, .work-block-right {
+    width: 100%;
+    margin-bottom: 6rem; }
+  .work-block-right {
+    margin-left: 0; }
+  .work-block-left:before, .work-block-right:before {
+    display: none; }
+  .work-block-copy {
+    padding-right: 0; }
+  .work-block-right .work-block-copy {
+    padding: 0; }
+  .work-block-left .decor-top, .work-block-right .decor-top {
+    background: #007DFF; }
+  .work-block-left .decor-bottom, .work-block-right .decor-bottom {
+    background: #F5E768; }
   .work-block-img {
-    width: 300px; }
+    width: 100%; }
   .ninty-video, .king-video {
     height: 625px; }
   .ninty-video video, .king-video video {
